--- a/angular2-directives/src/app/list/list.component.html
+++ b/angular2-directives/src/app/list/list.component.html
@@ -1,3 +1,4 @@
+<h1>1. Structural Directive</h1>
 <label>Hero Names</label>
 <input placeholder="Insert Hero Name Here" class="form-control" [(ngModel)] ="heroName">
 <br>
@@ -5,7 +6,8 @@
 <ul>
 <li *ngFor="let hero of heros">{{hero}}</li>
 <ul>
-
+<h1>2. Uppercase</h1><hr>
+<p appUpper >test</p>
 <h1>3. Visibility Directive</h1><hr>
 <ul>
     <li [myVisibility] = true>4. this should be hidden</li>
@@ -14,6 +16,6 @@
     <li [myVisibility] = false>7. this should be hidden</li>
 </ul>
 
-<h1>4. Directive to change color on click</h1>
+<h1>4. Directive to change color on click</h1><hr>
 <p> <span appMycolor (myColorName) = "colorName = $event">Click to change text color </span> </p>
 <p>  Color is : {{colorName}}</p>
